--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,9 @@ python = "^3.8"
 
 typer = {extras = ["all"], version = "^0.3.2"}
 rich = "^10.7.0"
-transformers = {extras = ["sentencepiece"], version = "^4.10.0"}
+transformers = "^4.10.0"
+sentencepiece = "^0.1.96"
+protobuf = "^3.17.3"
 torch = "^1.9.0"
 captum = "^0.4.0"
 seaborn = "^0.11.2"
@@ -60,6 +62,7 @@ pylint = "^2.10.2"
 pytest = "^6.2.4"
 pyupgrade = "^2.24.0"
 safety = "^1.10.3"
+ipykernel = "^6.4.1"
 
 [tool.black]
 # https://github.com/psf/black
