--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,9 @@ protobuf = "^3.18.0"
 torch = "^1.9.1"
 captum = "^0.4.0"
 seaborn = "^0.11.2"
-tqdm = "^4.62.3"
 numpy = "^1.21.0"
+torchtyping = "^0.1.4"
+ipywidgets = "^7.6.5"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
