--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,9 +5,16 @@ default_stages: [commit, push]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+    rev: v4.0.1
     hooks:
+      - id: trailing-whitespace
       - id: check-yaml
+      - id: check-added-large-files
+        args: ['--maxkb=1000']
+      - id: check-toml
+      - id: check-merge-conflict
+      - id: mixed-line-ending
+        args: ['--fix=lf']
       - id: end-of-file-fixer
         exclude: LICENSE
 
@@ -26,6 +33,12 @@ repos:
         entry: poetry run isort --settings-path pyproject.toml
         types: [python]
         language: system
+  
+  - repo: local
+    hooks:
+      - id: flake8
+        name: flake8
+        entry: poetry run flake8 --config setup.cfg
 
   - repo: local
     hooks:
@@ -34,3 +47,18 @@ repos:
         entry: poetry run black --config pyproject.toml
         types: [python]
         language: system
+
+  - repo: local
+    hooks:
+      - id: test
+        name: test
+        entry: make
+        args: ["test"]
+        language: system
+        pass_filenames: false
+      - id: clean
+        name: clean
+        entry: make
+        args: ["clean"]
+        language: system
+        pass_filenames: false
