--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 name = "inseq"
 version = "0.1.0"
-description = "Attribution methods for sequence-to-sequence transformer models 🔍"
+description = "Interpretability for Sequence-to-sequence models 🔍"
 readme = "README.md"
 authors = ["gsarti <gabriele.sarti996@gmail.com>"]
+maintainers = ["gsarti <gabriele.sarti996@gmail.com>"]
 license = "Apache Software License 2.0"
 repository = "https://github.com/gsarti/inseq"
 homepage = "https://github.com/gsarti/inseq"
@@ -52,8 +53,10 @@ ipywidgets = "^7.6.5"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
-black = {version = "^21.7b0", allow-prereleases = true}
+black = {version = "^21.9b0", allow-prereleases = true}
 darglint = "^1.8.0"
+flake8 = "^3.9.2"
+ipykernel = "^6.4.1"
 isort = {extras = ["colors"], version = "^5.9.3"}
 mypy = "^0.910"
 mypy-extensions = "^0.4.3"
@@ -62,8 +65,15 @@ pydocstyle = "^6.1.1"
 pylint = "^2.11.1"
 pytest = "^6.2.4"
 pyupgrade = "^2.26.0"
+recommonmark = "^0.7.1"
 safety = "^1.10.3"
-ipykernel = "^6.4.1"
+sphinx = "^4.2.0"
+sphinxemoji = "^0.1.9"
+sphinxext-opengraph = "^0.4.2" 
+sphinx-copybutton = "^0.4.0"
+sphinx-gitstamp = "^0.3.1"
+sphinx-markdown-tables = "^0.0.15"
+sphinx-rtd-theme = "^1.0.0"
 
 [tool.black]
 # https://github.com/psf/black
@@ -130,6 +140,8 @@ warn_unused_ignores = true
 [tool.pytest.ini_options]
 # https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
 # Directories that are not visited by pytest collector:
+testpaths = "tests"
+python_files = "test_*.py"
 norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
 doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
 
@@ -139,4 +151,6 @@ addopts = [
   "--tb=short",
   "--doctest-modules",
   "--doctest-continue-on-failure",
+  "--disable-pytest-warnings",
+  "--color=yes"
 ]
