--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,33 @@
 # https://github.com/terrencepreilly/darglint
 strictness = long
 docstring_style = google
+
+[coverage:report]
+exclude_lines =
+    pragma: no-cover
+    pass
+    raise
+    except
+    raise NotImplementedError
+
+[coverage:run]
+source=inseq
+omit =
+    */__main__.py
+
+[flake8]
+exclude = venv .tox,*.egg,build,temp
+select = E,W,F
+doctests = True
+verbose = 2
+format = pylint
+max-line-length = 119
+per-file-ignores = __init__.py:F401
+ignore=
+    E731, # do not assign lambda, use a def
+    E741, # ambiguous variable name
+    W503, # line break occurred before a binary operator
+
+[metadata]
+license_file = LICENSE
+description-file = README.md
