--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ per-file-ignores = __init__.py:F401
 ignore=
     E731, # do not assign lambda, use a def
     E741, # ambiguous variable name
+    F821, # undefined name for TensorType dimensions
     W503, # line break occurred before a binary operator
 
 [metadata]
