--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Run style checks
       run: |
-        make check-codestyle
+        make check-style
 
     - name: Run tests
       run: |
