--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ seaborn = "^0.11.2"
 numpy = "^1.21.0"
 torchtyping = "^0.1.4"
 ipywidgets = "^7.6.5"
+scikit-learn = "^1.0"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
@@ -69,7 +71,7 @@ recommonmark = "^0.7.1"
 safety = "^1.10.3"
 sphinx = "^4.2.0"
 sphinxemoji = "^0.1.9"
-sphinxext-opengraph = "^0.4.2" 
+sphinxext-opengraph = "^0.4.2"
 sphinx-copybutton = "^0.4.0"
 sphinx-gitstamp = "^0.3.1"
 sphinx-markdown-tables = "^0.0.15"
