--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,14 +1,19 @@
-name: auto-merge
-
-on:
-  pull_request_target:
+name: Dependabot
+on: pull_request
 
 jobs:
+  auto-approve:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: hmarr/auto-approve-action@v2.0.0
+        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+
   auto-merge:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+      - uses: ahmadnassri/action-dependabot-auto-merge@v1
         with:
-          target: minor
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          target: patch
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
