--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -5,6 +5,7 @@ on: [pull_request, issues]
 jobs:
   greeting:
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
     steps:
     - uses: actions/first-interaction@v1
       with:
