Fix flake8 scope

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,18 @@ omit =
     */__main__.py
 
 [flake8]
-exclude = venv .tox,*.egg,build,temp
+exclude =
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    old,
+    build,
+    dist,
+    .tox,
+    temp,
+    *.egg,
+    venv,
+    .venv
 select = E,W,F
 doctests = True
 verbose = 2
@@ -37,4 +48,3 @@ description-file = README.md
 [bandit]
 targets = ["inseq"]
 skips = ["B301"]
-
