--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ format = pylint
 max-line-length = 119
 per-file-ignores = __init__.py:F401
 ignore=
+    E203, # whitespace before ':'
     E731, # do not assign lambda, use a def
     E741, # ambiguous variable name
     F821, # undefined name for TensorType dimensions
