Added device management and tests for AttributionModel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,6 @@ rich = "^10.13.0"
 transformers = "^4.12.3"
 sentencepiece = "^0.1.96"
 protobuf = "^3.19.1"
-torch = "^1.10.0"
 captum = "^0.4.1"
 seaborn = "^0.11.2"
 numpy = "^1.21.0"
@@ -52,6 +51,7 @@ torchtyping = "^0.1.4"
 ipywidgets = "^7.6.5"
 scikit-learn = "^1.0"
 sklearn = "^0.0"
+torch = "^1.10.1"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
@@ -153,7 +153,8 @@ norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".gi
 doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
 
 markers = [
-  "slow"
+  "slow",
+  "require_gpu"
 ]
 
 # Extra options:
