--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/inseq-team/inseq"
 homepage = "https://github.com/inseq-team/inseq"
 
 # Keywords description https://python-poetry.org/docs/pyproject/#keywords
-keywords = ["seq2seq", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability"]  #! Update me
+keywords = ["seq2seq", "transformers", "natural language processing", "XAI", "explainable ai", "interpretability"]
 
 # Pypi classifiers: https://pypi.org/classifiers/
 classifiers = [  #! Update me
@@ -41,41 +41,46 @@ python = "^3.8"
 
 typer = {extras = ["all"], version = "^0.4.0"}
 rich = "^10.13.0"
-transformers = "^4.12.3"
+transformers = "^4.17.0"
 sentencepiece = "^0.1.96"
 protobuf = "^3.19.1"
 captum = "^0.4.1"
 seaborn = "^0.11.2"
-numpy = "^1.21.0"
+numpy = "^1.22.3"
 torchtyping = "^0.1.4"
 ipywidgets = "^7.6.5"
 scikit-learn = "^1.0"
 sklearn = "^0.0"
-torch = "^1.10.1"
+json-tricks = "^3.15.5"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.7.0"
-black = {version = "^21.10b0", allow-prereleases = true}
+bandit = "^1.7.4"
+black = {version = "^21.12b0", allow-prereleases = true}
 darglint = "^1.8.1"
 flake8 = "^4.0.1"
-ipykernel = "^6.5.0"
-isort = {extras = ["colors"], version = "^5.10.0"}
+ipykernel = "^6.9.2"
+isort = {extras = ["colors"], version = "^5.10.1"}
 mypy = "^0.910"
 mypy-extensions = "^0.4.3"
-pre-commit = "^2.14.0"
+pre-commit = "^2.17.0"
 pydocstyle = "^6.1.1"
-pylint = "^2.11.1"
-pytest = "^6.2.4"
-pyupgrade = "^2.29.0"
+pylint = "^2.12.2"
+pytest = "^6.2.5"
+pyupgrade = "^2.31.1"
 recommonmark = "^0.7.1"
 safety = "^1.10.3"
-sphinx = "^4.2.0"
+sphinx = "^4.4.0"
 sphinxemoji = "^0.2.0"
 sphinxext-opengraph = "^0.4.2"
 sphinx-copybutton = "^0.4.0"
 sphinx-gitstamp = "^0.3.2"
 sphinx-markdown-tables = "^0.0.15"
 sphinx-rtd-theme = "^1.0.0"
+poethepoet = "^0.13.1"
+
+[tool.poe.tasks]
+torch-cpu = "python -m pip install torch==1.11.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
+torch-cuda11 = "python -m pip install torch==1.11.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
 
 [tool.black]
 # https://github.com/psf/black
