--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         poetry config virtualenvs.in-project true
         poetry install
+        poe torch-cpu
 
     - name: Run style checks
       run: |
