--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ torch = "^1.11.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.4"
-black = {version = "^21.12b0", allow-prereleases = true}
+black = "^22.3.0"
 darglint = "^1.8.1"
 flake8 = "^4.0.1"
 ipykernel = "^6.9.2"
