--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
 ]
 
 [tool.poetry.scripts]
@@ -37,7 +38,7 @@ classifiers = [  #! Update me
 "inseq" = "inseq.__main__:app"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 
 typer = {extras = ["all"], version = "^0.4.0"}
 rich = "^10.13.0"
@@ -53,6 +54,7 @@ scikit-learn = "^1.0"
 sklearn = "^0.0"
 json-tricks = "^3.15.5"
 torch = "^1.11.0"
+scipy = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.4"
