--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,108 @@
-captum==0.4.0; python_version >= "3.6"
-certifi==2021.5.30; python_full_version >= "3.6.0"
-charset-normalizer==2.0.4; python_version >= "3" and python_full_version >= "3.6.0"
-click==7.1.2; python_full_version >= "3.6.0" and python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.6" and python_full_version >= "3.6.0" and python_version < "4.0" and platform_system == "Windows"
-commonmark==0.9.1; python_version >= "3.6" and python_version < "4.0"
-cycler==0.10.0; python_version >= "3.7"
-filelock==3.0.12; python_full_version >= "3.6.0"
-huggingface-hub==0.0.17; python_full_version >= "3.6.0"
-idna==3.2; python_version >= "3.5" and python_full_version >= "3.6.0"
-joblib==1.0.1; python_version >= "3.6" and python_full_version >= "3.6.0"
-kiwisolver==1.3.2; python_version >= "3.7"
-matplotlib==3.4.3; python_version >= "3.7"
-numpy==1.21.1; python_version >= "3.7"
-packaging==21.0; python_version >= "3.6" and python_full_version >= "3.6.0"
-pandas==1.3.3; python_full_version >= "3.7.1" and python_version >= "3.6"
-pillow==8.3.2; python_version >= "3.7"
-protobuf==3.17.3; python_full_version >= "3.6.0"
-pygments==2.10.0; python_version >= "3.6" and python_version < "4.0"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version >= "3.6.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7")
-python-dateutil==2.8.2; python_full_version >= "3.7.1" and python_version >= "3.7"
-pytz==2021.1; python_full_version >= "3.7.1" and python_version >= "3.6"
-pyyaml==5.4.1; python_full_version >= "3.6.0"
-regex==2021.8.28; python_full_version >= "3.6.0"
-requests==2.26.0; python_full_version >= "3.6.0"
-rich==10.9.0; python_version >= "3.6" and python_version < "4.0"
-sacremoses==0.0.45; python_full_version >= "3.6.0"
-scipy==1.6.1; python_version >= "3.7"
+appnope==0.1.2; platform_system == "Darwin" and python_version >= "3.8" and sys_platform == "darwin"
+argon2-cffi-bindings==21.2.0; python_version >= "3.6"
+argon2-cffi==21.3.0; python_version >= "3.6"
+asttokens==2.0.5; python_version >= "3.8"
+attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+backcall==0.2.0; python_version >= "3.8"
+beautifulsoup4==4.10.0; python_full_version > "3.0.0" and python_version >= "3.7"
+bleach==4.1.0; python_version >= "3.7"
+captum==0.4.1; python_version >= "3.6"
+certifi==2021.10.8; python_full_version >= "3.6.0"
+cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.7"
+charset-normalizer==2.0.12; python_version >= "3" and python_full_version >= "3.6.0"
+click==8.1.1; python_version >= "3.7" and python_full_version >= "3.6.0"
+colorama==0.4.4; python_version >= "3.6" and python_full_version >= "3.6.2" and python_full_version < "4.0.0" and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0") and platform_system == "Windows" and (python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0")
+commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
+cycler==0.11.0; python_version >= "3.7"
+debugpy==1.6.0; python_version >= "3.7"
+decorator==5.1.1; python_version >= "3.8"
+defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+entrypoints==0.4; python_version >= "3.7"
+executing==0.8.3; python_version >= "3.8"
+filelock==3.6.0; python_version >= "3.7" and python_full_version >= "3.6.0"
+fonttools==4.31.2; python_version >= "3.7"
+huggingface-hub==0.4.0; python_full_version >= "3.6.0"
+idna==3.3; python_version >= "3.5" and python_full_version >= "3.6.0"
+importlib-resources==5.6.0; python_version < "3.9" and python_version >= "3.7"
+ipykernel==6.10.0; python_version >= "3.7"
+ipython-genutils==0.2.0; python_version >= "3.6"
+ipython==8.2.0; python_version >= "3.8"
+ipywidgets==7.7.0
+jedi==0.18.1; python_version >= "3.8"
+jinja2==3.1.1; python_version >= "3.7"
+joblib==1.1.0; python_version >= "3.7" and python_full_version >= "3.6.0"
+json-tricks==3.15.5
+jsonschema==4.4.0; python_version >= "3.7"
+jupyter-client==7.2.1; python_full_version >= "3.7.0" and python_version >= "3.7"
+jupyter-core==4.9.2; python_version >= "3.7"
+jupyterlab-pygments==0.1.2; python_version >= "3.7"
+jupyterlab-widgets==1.1.0; python_version >= "3.6"
+kiwisolver==1.4.2; python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7"
+matplotlib-inline==0.1.3; python_version >= "3.8"
+matplotlib==3.5.1; python_version >= "3.7"
+mistune==0.8.4; python_version >= "3.7"
+nbclient==0.5.13; python_full_version >= "3.7.0" and python_version >= "3.7"
+nbconvert==6.4.5; python_version >= "3.7"
+nbformat==5.2.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+nest-asyncio==1.5.4; python_full_version >= "3.7.0" and python_version >= "3.7"
+notebook==6.4.10; python_version >= "3.6"
+numpy==1.22.3; python_version >= "3.8"
+packaging==21.3; python_version >= "3.7" and python_full_version >= "3.6.0"
+pandas==1.4.1; python_version >= "3.8"
+pandocfilters==1.5.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+parso==0.8.3; python_version >= "3.8"
+pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
+pickleshare==0.7.5; python_version >= "3.8"
+pillow==9.0.1; python_version >= "3.7"
+prometheus-client==0.13.1; python_version >= "3.6"
+prompt-toolkit==3.0.28; python_full_version >= "3.6.2" and python_version >= "3.8"
+protobuf==3.19.4; python_version >= "3.5"
+psutil==5.9.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8" and os_name != "nt"
+pure-eval==0.2.2; python_version >= "3.8"
+py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.5.0"
+pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.4.0"
+pygments==2.11.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.8"
+pyparsing==3.0.7; python_version >= "3.7" and python_full_version >= "3.6.0"
+pyrsistent==0.18.1; python_version >= "3.7"
+python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+pytz==2022.1; python_version >= "3.8"
+pywin32==303; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
+pywinpty==2.0.5; os_name == "nt" and python_version >= "3.7"
+pyyaml==6.0; python_version >= "3.6" and python_full_version >= "3.6.0"
+pyzmq==22.3.0; python_version >= "3.7"
+regex==2022.3.15; python_version >= "3.6" and python_full_version >= "3.6.0"
+requests==2.27.1; python_full_version >= "3.6.0"
+rich==10.16.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
+sacremoses==0.0.49; python_full_version >= "3.6.0"
+scikit-learn==1.0.2; python_version >= "3.7"
+scipy==1.8.0; python_version >= "3.8" and python_version < "3.11"
 seaborn==0.11.2; python_version >= "3.6"
-sentencepiece==0.1.91; python_full_version >= "3.6.0"
+send2trash==1.8.0; python_version >= "3.6"
+sentencepiece==0.1.96
+setuptools-scm==6.4.2; python_version >= "3.7"
 shellingham==1.4.0; python_version >= "3.6"
-six==1.16.0; python_full_version >= "3.6.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7")
-tokenizers==0.10.3; python_full_version >= "3.6.0"
-torch==1.9.0; python_full_version >= "3.6.2"
-transformers==4.10.2; python_full_version >= "3.6.0"
-typer==0.3.2; python_version >= "3.6"
-typing-extensions==3.10.0.2; python_full_version >= "3.6.2" and python_version >= "3.6"
-urllib3==1.26.6; python_full_version >= "3.6.0" and python_version < "4"
+six==1.16.0; python_full_version >= "3.6.0" and python_version >= "3.7" and (python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7")
+sklearn==0.0
+soupsieve==2.3.1; python_full_version > "3.0.0" and python_version >= "3.7"
+stack-data==0.2.0; python_version >= "3.8"
+terminado==0.13.3; python_version >= "3.7"
+testpath==0.6.0; python_version >= "3.7"
+threadpoolctl==3.1.0; python_version >= "3.7"
+tokenizers==0.11.6; python_full_version >= "3.6.0"
+tomli==2.0.1; python_version >= "3.7"
+torch==1.11.0; python_full_version >= "3.7.0"
+torchtyping==0.1.4; python_full_version >= "3.7.0"
+tornado==6.1; python_version >= "3.7"
+tqdm==4.63.1; python_full_version >= "3.6.0"
+traitlets==5.1.1; python_full_version >= "3.7.0" and python_version >= "3.8"
+transformers==4.17.0; python_full_version >= "3.6.0"
+typeguard==2.13.3; python_full_version >= "3.7.0"
+typer==0.4.1; python_version >= "3.6"
+typing-extensions==4.1.1; python_full_version >= "3.7.0" and python_version >= "3.6"
+urllib3==1.26.9; python_full_version >= "3.6.0" and python_version < "4"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
+webencodings==0.5.1; python_version >= "3.7"
+widgetsnbextension==3.6.0
+zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
