--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,4 @@ jobs:
       uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
+        pre-build-command: "pip install --upgrade pip"
