--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,8 @@
-recommonmark=="0.7.1"
-sphinx=="4.4.0"
-sphinxemoji=="0.2.0"
-sphinxext-opengraph=="0.4.2"
-sphinx-copybutton=="0.4.0"
-sphinx-gitstamp=="0.3.2"
-sphinx-markdown-tables=="0.0.15"
-sphinx-rtd-theme=="1.0.0"
+recommonmark==0.7.1
+sphinx==4.4.0
+sphinxemoji==0.2.0
+sphinxext-opengraph==0.4.2
+sphinx-copybutton==0.4.0
+sphinx-gitstamp==0.3.2
+sphinx-markdown-tables==0.0.15
+sphinx-rtd-theme==1.0.0
