--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,17 @@ keywords = ["seq2seq", "transformers", "natural language processing", "XAI", "ex
 classifiers = [  #! Update me
   "Development Status :: 3 - Alpha",
   "Environment :: Console",
+  "Environment :: GPU",
   "Environment :: GPU :: NVIDIA CUDA",
-  "Intended Audience :: Developers",
+  "Environment :: GPU :: NVIDIA CUDA :: 11.3",
+  "Framework :: Jupyter",
+  "Framework :: Sphinx",
+  "Intended Audience :: Science/Research",
   "Operating System :: OS Independent",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
   "Topic :: Scientific/Engineering :: Visualization",
   "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
