--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,42 +40,43 @@ classifiers = [  #! Update me
 
 [tool.poetry.scripts]
 # Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
-"inseq" = "inseq.__main__:app"
+"inseq" = "inseq.commands.cli:main"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 
-typer = {extras = ["all"], version = "^0.4.0"}
 rich = "^10.13.0"
-transformers = "^4.17.0"
+transformers = "^4.18.0"
 sentencepiece = "^0.1.96"
-protobuf = "^3.19.1"
+protobuf = "^3.20.0"
 captum = "^0.4.1"
-seaborn = "^0.11.2"
 numpy = "^1.22.3"
 torchtyping = "^0.1.4"
-ipywidgets = "^7.6.5"
-scikit-learn = "^1.0"
-sklearn = "^0.0"
 json-tricks = "^3.15.5"
 torch = "^1.11.0"
 scipy = "^1.8.0"
+matplotlib = "^3.5.1"
+tqdm = "^4.64.0"
+ipywidgets = "^7.6.5"
+
+scikit-learn = { version = "^1.0", optional = true }
+datasets = { version = "^2.0.0", optional = true }
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.4"
 black = "^22.3.0"
 darglint = "^1.8.1"
 flake8 = "^4.0.1"
-ipykernel = "^6.9.2"
+ipykernel = "^6.13.0"
 isort = {extras = ["colors"], version = "^5.10.1"}
 mypy = "^0.910"
 mypy-extensions = "^0.4.3"
-pre-commit = "^2.17.0"
+pre-commit = "^2.18.1"
 poethepoet = "^0.13.1"
 pydocstyle = "^6.1.1"
-pylint = "^2.12.2"
+pylint = "^2.13.5"
 pytest = "^6.2.5"
-pyupgrade = "^2.31.1"
+pyupgrade = "^2.32.0"
 recommonmark = "^0.7.1"
 safety = "^1.10.3"
 sphinx = "^4.4.0"
@@ -85,6 +86,14 @@ sphinx-copybutton = "^0.4.0"
 sphinx-gitstamp = "^0.3.2"
 sphinx-markdown-tables = "^0.0.15"
 sphinx-rtd-theme = "^1.0.0"
+
+[tool.poetry.extras]
+scikit-learn = ["scikit-learn"]
+datasets = ["datasets"]
+all = [
+  "scikit-learn",
+  "datasets",
+]
 
 [tool.poe.tasks]
 torch-cpu = "python -m pip install torch==1.11.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
