--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ default_stages: [commit, push]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: check-yaml
@@ -67,7 +67,7 @@ repos:
 
   - repo: local
     hooks:
-      - id: test
+      - id: docs
         name: build docs
         entry: make
         args: ["build-docs"]
