--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,12 @@ default_stages: [commit, push]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: check-yaml
       - id: check-added-large-files
-        args: ['--maxkb=1000']
+        args: ['--maxkb=2500']
       - id: check-toml
       - id: check-merge-conflict
       - id: mixed-line-ending
@@ -67,7 +67,7 @@ repos:
 
   - repo: local
     hooks:
-      - id: test
+      - id: docs
         name: build docs
         entry: make
         args: ["build-docs"]
