--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,21 +46,21 @@ classifiers = [  #! Update me
 python = ">=3.8,<3.11"
 
 rich = "^10.13.0"
-transformers = "^4.18.0"
-sentencepiece = "^0.1.96"
-protobuf = "^3.20.0"
+transformers =  { version = "^4.19.4", extras = ["sentencepiece", "tokenizers", "torch", "torchhub"] }
+protobuf = "^3.20.1"
 captum = "^0.4.1"
-numpy = "^1.22.3"
+numpy = "^1.22.4"
 torchtyping = "^0.1.4"
 json-tricks = "^3.15.5"
 torch = "^1.11.0"
-scipy = "^1.8.0"
-matplotlib = "^3.5.1"
+scipy = "^1.8.1"
+matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
 ipywidgets = "^7.6.5"
+poethepoet = "^0.13.1"
 
 scikit-learn = { version = "^1.0", optional = true }
-datasets = { version = "^2.0.0", optional = true }
+datasets = { version = "^2.0.0", optional = true, extras = ["torch"] }
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.4"
@@ -71,12 +71,11 @@ ipykernel = "^6.13.0"
 isort = {extras = ["colors"], version = "^5.10.1"}
 mypy = "^0.910"
 mypy-extensions = "^0.4.3"
-pre-commit = "^2.18.1"
-poethepoet = "^0.13.1"
+pre-commit = "^2.19.0"
 pydocstyle = "^6.1.1"
-pylint = "^2.13.5"
+pylint = "^2.14.1"
 pytest = "^6.2.5"
-pyupgrade = "^2.32.0"
+pyupgrade = "^2.34.0"
 recommonmark = "^0.7.1"
 safety = "^1.10.3"
 sphinx = "^4.4.0"
@@ -96,6 +95,7 @@ all = [
 ]
 
 [tool.poe.tasks]
+upgrade-pip = "python -m pip install --upgrade pip"
 torch-cpu = "python -m pip install torch==1.11.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
 torch-cuda11 = "python -m pip install torch==1.11.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
 
