Refactored kwargs, generalized step scores signatures

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,14 @@ omit =
 [flake8]
 exclude =
     .git,
+    .vscode,
+    .github,
     __pycache__,
     docs/source/conf.py,
     old,
     build,
+    htmlcov,
+    examples,
     dist,
     .tox,
     temp,
