--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ all = [
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
 torch-cpu = "python -m pip install torch==1.12.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
-torch-cuda11 = "python -m pip install torch==1.12.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
+torch-cuda11 = "python -m pip install torch --extra-index-url https://download.pytorch.org/whl/cu116"
 
 [tool.black]
 # https://github.com/psf/black
