--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ torch = "^1.12.0"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
-ipywidgets = "^7.6.5"
+ipywidgets = "^8.0.0rc2"
 poethepoet = "^0.13.1"
 
 scikit-learn = { version = "^1.1.1", optional = true }
