--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ darglint = "^1.8.1"
 flake8 = "^4.0.1"
 ipykernel = "^6.15.0"
 isort = {extras = ["colors"], version = "^5.10.1"}
+jupyterlab = "^3.4.7"
 mypy = "^0.910"
 mypy-extensions = "^0.4.3"
 pre-commit = "^2.19.0"
