--- a/requirements.txt
+++ b/requirements.txt
@@ -1,101 +1,75 @@
 appnope==0.1.3; platform_system == "Darwin" and python_version >= "3.8" and sys_platform == "darwin"
-argon2-cffi-bindings==21.2.0; python_version >= "3.7"
-argon2-cffi==21.3.0; python_version >= "3.7"
-asttokens==2.0.5; python_version >= "3.8"
-attrs==21.4.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+asttokens==2.0.8; python_version >= "3.8"
 backcall==0.2.0; python_version >= "3.8"
-beautifulsoup4==4.11.1; python_full_version >= "3.6.0" and python_version >= "3.7"
-bleach==5.0.1; python_version >= "3.7"
 captum==0.5.0; python_version >= "3.6"
-certifi==2022.6.15; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
+certifi==2022.9.24; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.7"
-charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
+charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 colorama==0.4.5; python_full_version >= "3.7.0" and python_full_version < "4.0.0" and platform_system == "Windows" and (python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0")
 commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-cycler==0.11.0; python_version >= "3.7"
-debugpy==1.6.0; python_version >= "3.7"
+contourpy==1.0.5; python_version >= "3.8"
+cycler==0.11.0; python_version >= "3.8"
+debugpy==1.6.3; python_version >= "3.7"
 decorator==5.1.1; python_version >= "3.8"
-defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 entrypoints==0.4; python_version >= "3.7"
-executing==0.8.3; python_version >= "3.8"
-fastjsonschema==2.15.3; python_version >= "3.7"
-filelock==3.7.1; python_version >= "3.7" and python_full_version >= "3.7.0"
-fonttools==4.33.3; python_version >= "3.7"
-huggingface-hub==0.8.1; python_full_version >= "3.7.0"
-idna==3.3; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
-importlib-metadata==4.12.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-importlib-resources==5.8.0; python_version < "3.9" and python_version >= "3.7"
-ipykernel==6.15.0; python_version >= "3.7"
-ipython-genutils==0.2.0; python_version >= "3.7"
-ipython==8.4.0; python_version >= "3.8"
-ipywidgets==7.7.1
+executing==1.1.1; python_version >= "3.8"
+filelock==3.8.0; python_version >= "3.7" and python_full_version >= "3.7.0"
+fonttools==4.37.4; python_version >= "3.8"
+huggingface-hub==0.10.1; python_full_version >= "3.7.0"
+idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
+importlib-metadata==5.0.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+ipykernel==6.16.0; python_version >= "3.7"
+ipython==8.5.0; python_version >= "3.8"
+ipywidgets==8.0.2; python_version >= "3.7"
 jedi==0.18.1; python_version >= "3.8"
-jinja2==3.1.2; python_version >= "3.7"
 json-tricks==3.15.5
-jsonschema==4.6.1; python_version >= "3.7"
-jupyter-client==7.3.4; python_full_version >= "3.7.0" and python_version >= "3.7"
-jupyter-core==4.10.0; python_version >= "3.7"
-jupyterlab-pygments==0.2.2; python_version >= "3.7"
-jupyterlab-widgets==1.1.1; python_version >= "3.6"
-kiwisolver==1.4.3; python_version >= "3.7"
-markupsafe==2.1.1; python_version >= "3.7"
-matplotlib-inline==0.1.3; python_version >= "3.8"
-matplotlib==3.5.2; python_version >= "3.7"
-mistune==0.8.4; python_version >= "3.7"
-nbclient==0.6.6; python_full_version >= "3.7.0" and python_version >= "3.7"
-nbconvert==6.5.0; python_version >= "3.7"
-nbformat==5.4.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-nest-asyncio==1.5.5; python_full_version >= "3.7.0" and python_version >= "3.7"
-notebook==6.4.12; python_version >= "3.7"
-numpy==1.23.0; python_version >= "3.8"
-packaging==21.3; python_version >= "3.7" and python_full_version >= "3.7.0"
-pandocfilters==1.5.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+jupyter-client==7.4.2; python_version >= "3.7"
+jupyter-core==4.11.1; python_version >= "3.7"
+jupyterlab-widgets==3.0.3; python_version >= "3.7"
+kiwisolver==1.4.4; python_version >= "3.8"
+matplotlib-inline==0.1.6; python_version >= "3.8"
+matplotlib==3.6.1; python_version >= "3.8"
+nest-asyncio==1.5.6; python_version >= "3.7"
+numpy==1.23.4; python_version >= "3.8"
+packaging==21.3; python_version >= "3.8" and python_full_version >= "3.7.0"
 parso==0.8.3; python_version >= "3.8"
 pastel==0.2.1; python_full_version >= "3.6.2"
 pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
 pickleshare==0.7.5; python_version >= "3.8"
-pillow==9.1.1; python_version >= "3.7"
+pillow==9.2.0; python_version >= "3.8"
 poethepoet==0.13.1; python_full_version >= "3.6.2"
-prometheus-client==0.14.1; python_version >= "3.7"
-prompt-toolkit==3.0.30; python_full_version >= "3.6.2" and python_version >= "3.8"
-protobuf==3.20.1; python_version >= "3.7"
-psutil==5.9.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8" and os_name != "nt"
+prompt-toolkit==3.0.31; python_full_version >= "3.6.2" and python_version >= "3.8"
+protobuf==3.20.2; python_version >= "3.7"
+psutil==5.9.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8"
 pure-eval==0.2.2; python_version >= "3.8"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.4.0"
-pygments==2.12.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.8"
-pyparsing==3.0.9; python_full_version >= "3.7.0" and python_version >= "3.7"
-pyrsistent==0.18.1; python_version >= "3.7"
-python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+pygments==2.13.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.8"
+pyparsing==3.0.9; python_full_version >= "3.7.0" and python_version >= "3.8"
+python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 pywin32==304; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
-pywinpty==2.0.5; os_name == "nt" and python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.6" and python_full_version >= "3.7.0"
-pyzmq==23.2.0; python_version >= "3.7"
-regex==2022.6.2; python_version >= "3.6" and python_full_version >= "3.7.0"
+pyzmq==24.0.1; python_version >= "3.7"
+regex==2022.9.13; python_version >= "3.6" and python_full_version >= "3.7.0"
 requests==2.28.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 rich==10.16.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-scipy==1.8.1; python_version >= "3.8" and python_version < "3.11"
-send2trash==1.8.0; python_version >= "3.7"
-sentencepiece==0.1.96; python_full_version >= "3.7.0"
-setuptools-scm==7.0.4; python_version >= "3.7"
+scipy==1.9.2; python_version >= "3.8"
+sentencepiece==0.1.97; python_full_version >= "3.7.0"
+setuptools-scm==7.0.5; python_version >= "3.8"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-soupsieve==2.3.2.post1; python_full_version >= "3.6.0" and python_version >= "3.7"
-stack-data==0.3.0; python_version >= "3.8"
-terminado==0.15.0; python_version >= "3.7"
-tinycss2==1.1.1; python_version >= "3.7"
-tokenizers==0.12.1; python_full_version >= "3.7.0"
-tomli==2.0.1; python_version >= "3.7" and python_full_version >= "3.6.2"
-torch==1.12.0; python_full_version >= "3.7.0"
+stack-data==0.5.1; python_version >= "3.8"
+tokenizers==0.13.1; python_full_version >= "3.7.0"
+tomli==2.0.1; python_version >= "3.8" and python_full_version >= "3.6.2"
+torch==1.12.1; python_full_version >= "3.7.0"
 torchtyping==0.1.4; python_full_version >= "3.7.0"
-tornado==6.1; python_version >= "3.7"
-tqdm==4.64.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-traitlets==5.3.0; python_full_version >= "3.7.0" and python_version >= "3.8"
-transformers==4.20.1; python_full_version >= "3.7.0"
+tornado==6.2; python_version >= "3.7"
+tqdm==4.64.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+traitlets==5.5.0; python_version >= "3.8"
+transformers==4.23.1; python_full_version >= "3.7.0"
 typeguard==2.13.3; python_full_version >= "3.7.0"
-typing-extensions==4.3.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-urllib3==1.26.9; python_full_version >= "3.7.0" and python_version < "4" and python_version >= "3.7"
+typing-extensions==4.4.0; python_full_version >= "3.7.0" and python_version >= "3.8"
+urllib3==1.26.12; python_full_version >= "3.7.0" and python_version < "4" and python_version >= "3.7"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
-webencodings==0.5.1; python_version >= "3.7"
-widgetsnbextension==3.6.1
-zipp==3.8.0; python_full_version >= "3.7.0" and python_version >= "3.7" and python_version < "3.9"
+widgetsnbextension==4.0.3; python_version >= "3.7"
+zipp==3.9.0; python_full_version >= "3.7.0" and python_version >= "3.7"
