--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ captum==0.5.0; python_version >= "3.6"
 certifi==2022.9.24; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.7"
 charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
-colorama==0.4.5; python_full_version >= "3.7.0" and python_full_version < "4.0.0" and platform_system == "Windows" and (python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0")
+colorama==0.4.6; python_full_version >= "3.7.0" and python_full_version < "4.0.0" and platform_system == "Windows" and (python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.7.0")
 commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
 contourpy==1.0.5; python_version >= "3.8"
 cycler==0.11.0; python_version >= "3.8"
@@ -14,17 +14,18 @@ decorator==5.1.1; python_version >= "3.8"
 entrypoints==0.4; python_version >= "3.7"
 executing==1.1.1; python_version >= "3.8"
 filelock==3.8.0; python_version >= "3.7" and python_full_version >= "3.7.0"
-fonttools==4.37.4; python_version >= "3.8"
+fonttools==4.38.0; python_version >= "3.8"
 huggingface-hub==0.10.1; python_full_version >= "3.7.0"
 idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 importlib-metadata==5.0.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-ipykernel==6.16.0; python_version >= "3.7"
+ipykernel==6.16.2; python_version >= "3.7"
 ipython==8.5.0; python_version >= "3.8"
 ipywidgets==8.0.2; python_version >= "3.7"
 jedi==0.18.1; python_version >= "3.8"
+joblib==1.2.0; python_version >= "3.7"
 json-tricks==3.15.5
-jupyter-client==7.4.2; python_version >= "3.7"
-jupyter-core==4.11.1; python_version >= "3.7"
+jupyter-client==7.4.4; python_version >= "3.7"
+jupyter-core==4.11.2; python_version >= "3.7"
 jupyterlab-widgets==3.0.3; python_version >= "3.7"
 kiwisolver==1.4.4; python_version >= "3.8"
 matplotlib-inline==0.1.6; python_version >= "3.8"
@@ -54,7 +55,7 @@ pyzmq==24.0.1; python_version >= "3.7"
 regex==2022.9.13; python_version >= "3.6" and python_full_version >= "3.7.0"
 requests==2.28.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
 rich==10.16.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-scipy==1.9.2; python_version >= "3.8"
+scipy==1.9.3; python_version >= "3.8"
 sentencepiece==0.1.97; python_full_version >= "3.7.0"
 setuptools-scm==7.0.5; python_version >= "3.8"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
@@ -72,4 +73,4 @@ typing-extensions==4.4.0; python_full_version >= "3.7.0" and python_version >= "
 urllib3==1.26.12; python_full_version >= "3.7.0" and python_version < "4" and python_version >= "3.7"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
 widgetsnbextension==4.0.3; python_version >= "3.7"
-zipp==3.9.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+zipp==3.10.0; python_full_version >= "3.7.0" and python_version >= "3.7"
