--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ exclude =
     venv,
     .venv
 select = E,W,F
-doctests = True
+doctests = False
 verbose = 2
 format = pylint
 max-line-length = 119
@@ -44,6 +44,7 @@ ignore=
     E741, # ambiguous variable name
     F821, # undefined name for TensorType dimensions
     W503, # line break occurred before a binary operator
+    C901, # too complex
 
 [metadata]
 license_file = LICENSE
