Fixed GPU backend check, optional deps separation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,11 +57,11 @@ torch = "^1.13.0"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
-ipykernel = "^6.15.0"
-ipywidgets = "^8.0.0rc2"
 poethepoet = "^0.13.1"
-joblib = "^1.2.0"
 
+ipykernel = { version = "^6.15.0", optional = true }
+ipywidgets = { version = "^8.0.0rc2", optional = true }
+joblib = { version = "^1.2.0", optional = true }
 scikit-learn = { version = "^1.1.1", optional = true }
 datasets = { version = "^2.3.2", optional = true, extras = ["torch"] }
 
@@ -86,7 +86,7 @@ bandit = "^1.7.4"
 safety = "^1.10.3"
 black = "^22.6.0"
 darglint = "^1.8.1"
-flake8 = "^4.0.1"
+flake8 = "^5.0.4"
 isort = {extras = ["colors"], version = "^5.10.1"}
 pre-commit = "^2.19.0"
 pylint = "^2.14.1"
@@ -94,8 +94,9 @@ pyupgrade = "^2.34.0"
 pytest = "^6.2.5"
 
 [tool.poetry.extras]
-scikit-learn = ["scikit-learn"]
+sklearn = ["scikit-learn", "joblib"]
 datasets = ["datasets"]
+notebook = ["ipykernel", "ipywidgets"]
 
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
