--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,46 @@
-appnope==0.1.3; platform_system == "Darwin" and python_version >= "3.8" and sys_platform == "darwin"
-asttokens==2.1.0; python_version >= "3.8"
-backcall==0.2.0; python_version >= "3.8"
-captum==0.5.0; python_version >= "3.6"
-certifi==2022.9.24; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
-cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.7"
-charset-normalizer==2.1.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
-colorama==0.4.6; python_full_version >= "3.7.0" and python_full_version < "4.0.0" and platform_system == "Windows" and (python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.7.0")
-commonmark==0.9.1; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-contourpy==1.0.5; python_version >= "3.8"
-cycler==0.11.0; python_version >= "3.8"
-debugpy==1.6.3; python_version >= "3.7"
-decorator==5.1.1; python_version >= "3.8"
-entrypoints==0.4; python_version >= "3.7"
-executing==1.2.0; python_version >= "3.8"
-filelock==3.8.0; python_version >= "3.7" and python_full_version >= "3.7.0"
-fonttools==4.38.0; python_version >= "3.8"
-huggingface-hub==0.10.1; python_full_version >= "3.7.0"
-idna==3.4; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
-importlib-metadata==5.0.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-ipykernel==6.16.2; python_version >= "3.7"
-ipython==8.6.0; python_version >= "3.8"
-ipywidgets==8.0.2; python_version >= "3.7"
-jedi==0.18.1; python_version >= "3.8"
-joblib==1.2.0; python_version >= "3.7"
-json-tricks==3.15.5
-jupyter-client==7.4.4; python_version >= "3.7"
-jupyter-core==4.11.2; python_version >= "3.7"
-jupyterlab-widgets==3.0.3; python_version >= "3.7"
-kiwisolver==1.4.4; python_version >= "3.8"
-matplotlib-inline==0.1.6; python_version >= "3.8"
-matplotlib==3.6.1; python_version >= "3.8"
-nest-asyncio==1.5.6; python_version >= "3.7"
-numpy==1.23.4; python_version >= "3.8"
-nvidia-cublas-cu11==11.10.3.66; python_full_version >= "3.7.0" and python_version >= "3.6"
-nvidia-cuda-nvrtc-cu11==11.7.99; python_full_version >= "3.7.0" and python_version >= "3.6"
-nvidia-cuda-runtime-cu11==11.7.99; python_full_version >= "3.7.0" and python_version >= "3.6"
-nvidia-cudnn-cu11==8.5.0.96; python_full_version >= "3.7.0" and python_version >= "3.6"
-packaging==21.3; python_version >= "3.8" and python_full_version >= "3.7.0"
-parso==0.8.3; python_version >= "3.8"
-pastel==0.2.1; python_full_version >= "3.6.2"
-pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
-pickleshare==0.7.5; python_version >= "3.8"
-pillow==9.3.0; python_version >= "3.8"
-poethepoet==0.13.1; python_full_version >= "3.6.2"
-prompt-toolkit==3.0.31; python_full_version >= "3.6.2" and python_version >= "3.8"
-protobuf==3.20.2; python_version >= "3.7"
-psutil==5.9.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.8"
-pure-eval==0.2.2; python_version >= "3.8"
-py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.5.0"
-pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.4.0"
-pygments==2.13.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.8"
-pyparsing==3.0.9; python_full_version >= "3.7.0" and python_version >= "3.8"
-python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-pywin32==304; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
-pyyaml==6.0; python_version >= "3.6" and python_full_version >= "3.7.0"
-pyzmq==24.0.1; python_version >= "3.7"
-regex==2022.9.13; python_version >= "3.6" and python_full_version >= "3.7.0"
-requests==2.28.1; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.7.0"
-rich==10.16.2; python_full_version >= "3.6.2" and python_full_version < "4.0.0"
-scipy==1.9.3; python_version >= "3.8"
-sentencepiece==0.1.97; python_full_version >= "3.7.0"
-setuptools-scm==7.0.5; python_version >= "3.8"
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
-stack-data==0.6.0; python_version >= "3.8"
-tokenizers==0.13.1; python_full_version >= "3.7.0"
-tomli==2.0.1; python_version >= "3.8" and python_full_version >= "3.6.2"
-torch==1.13.0; python_full_version >= "3.7.0"
-torchtyping==0.1.4; python_full_version >= "3.7.0"
-tornado==6.2; python_version >= "3.7"
-tqdm==4.64.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-traitlets==5.5.0; python_version >= "3.8"
-transformers==4.23.1; python_full_version >= "3.7.0"
-typeguard==2.13.3; python_full_version >= "3.7.0"
-typing-extensions==4.4.0; python_full_version >= "3.7.0" and python_version >= "3.8"
-urllib3==1.26.12; python_full_version >= "3.7.0" and python_version < "4" and python_version >= "3.7"
-wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.8"
-widgetsnbextension==4.0.3; python_version >= "3.7"
-zipp==3.10.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+captum==0.5.0 ; python_version >= "3.8" and python_version < "3.12"
+certifi==2022.9.24 ; python_version >= "3.8" and python_version < "3.12"
+charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "3.12"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "3.12"
+commonmark==0.9.1 ; python_version >= "3.8" and python_version < "3.12"
+contourpy==1.0.6 ; python_version >= "3.8" and python_version < "3.12"
+cycler==0.11.0 ; python_version >= "3.8" and python_version < "3.12"
+filelock==3.8.0 ; python_version >= "3.8" and python_version < "3.12"
+fonttools==4.38.0 ; python_version >= "3.8" and python_version < "3.12"
+huggingface-hub==0.10.1 ; python_version >= "3.8" and python_version < "3.12"
+idna==3.4 ; python_version >= "3.8" and python_version < "3.12"
+json-tricks==3.15.5 ; python_version >= "3.8" and python_version < "3.12"
+kiwisolver==1.4.4 ; python_version >= "3.8" and python_version < "3.12"
+matplotlib==3.6.1 ; python_version >= "3.8" and python_version < "3.12"
+numpy==1.23.4 ; python_version >= "3.8" and python_version < "3.12"
+nvidia-cublas-cu11==11.10.3.66 ; python_version >= "3.8" and python_version < "3.12"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_version >= "3.8" and python_version < "3.12"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_version >= "3.8" and python_version < "3.12"
+nvidia-cudnn-cu11==8.5.0.96 ; python_version >= "3.8" and python_version < "3.12"
+packaging==21.3 ; python_version >= "3.8" and python_version < "3.12"
+pastel==0.2.1 ; python_version >= "3.8" and python_version < "3.12"
+pillow==9.3.0 ; python_version >= "3.8" and python_version < "3.12"
+poethepoet==0.13.1 ; python_version >= "3.8" and python_version < "3.12"
+protobuf==3.20.2 ; python_version >= "3.8" and python_version < "3.12"
+pygments==2.13.0 ; python_version >= "3.8" and python_version < "3.12"
+pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.12"
+python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.12"
+pyyaml==6.0 ; python_version >= "3.8" and python_version < "3.12"
+regex==2022.10.31 ; python_version >= "3.8" and python_version < "3.12"
+requests==2.28.1 ; python_version >= "3.8" and python_version < "3.12"
+rich==10.16.2 ; python_version >= "3.8" and python_version < "3.12"
+scipy==1.9.3 ; python_version >= "3.8" and python_version < "3.12"
+sentencepiece==0.1.97 ; python_version >= "3.8" and python_version < "3.12"
+setuptools-scm==7.0.5 ; python_version >= "3.8" and python_version < "3.12"
+setuptools==65.5.0 ; python_version >= "3.8" and python_version < "3.12"
+six==1.16.0 ; python_version >= "3.8" and python_version < "3.12"
+tokenizers==0.13.1 ; python_version >= "3.8" and python_version < "3.12"
+tomli==2.0.1 ; python_version >= "3.8" and python_version < "3.12"
+torch==1.13.0 ; python_version >= "3.8" and python_version < "3.12"
+torchtyping==0.1.4 ; python_version >= "3.8" and python_version < "3.12"
+tqdm==4.64.1 ; python_version >= "3.8" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.24.0 ; python_version >= "3.8" and python_version < "3.12"
+typeguard==2.13.3 ; python_version >= "3.8" and python_version < "3.12"
+typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "3.12"
+urllib3==1.26.12 ; python_version >= "3.8" and python_version < "3.12"
+wheel==0.37.1 ; python_version >= "3.8" and python_version < "3.12"
