removed python 3.11 build target

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,7 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.10"
 ]
 
 [tool.poetry.scripts]
