Fix setup.cfg for flake8 6.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,12 +39,7 @@ verbose = 2
 format = pylint
 max-line-length = 119
 per-file-ignores = __init__.py:F401
-ignore=
-    E731, # do not assign lambda, use a def
-    E741, # ambiguous variable name
-    F821, # undefined name for TensorType dimensions
-    W503, # line break occurred before a binary operator
-    C901, # too complex
+ignore= E203, E731, E741, F821, W503, C901
 
 [metadata]
 license_file = LICENSE
