[WIP] Fix issues with pytorch 1.13 on MacOs (#151)
* temp reverted to torch 1.12.1 and disallowed use of mps device

* upgraded torch to 1.13.1

* fixed new dependencies, added comment about mps disablement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ classifiers = [  #! Update me
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.11"
+
 ]
 
 [tool.poetry.scripts]
@@ -53,7 +54,7 @@ captum = "^0.5.0"
 numpy = "^1.22.4"
 torchtyping = "^0.1.4"
 json-tricks = "^3.15.5"
-torch = "^1.13.0"
+torch = "^1.13.1"
 scipy = "^1.8.1"
 matplotlib = "^3.5.2"
 tqdm = "^4.64.0"
@@ -101,7 +102,7 @@ notebook = ["ipykernel", "ipywidgets"]
 
 [tool.poe.tasks]
 upgrade-pip = "python -m pip install --upgrade pip"
-torch-cpu = "python -m pip install torch==1.13.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"
+torch-cpu = "python -m pip install torch==1.13.1+cpu -f https://download.pytorch.org/whl/torch_stable.html"
 torch-cuda11 = "python -m pip install torch --extra-index-url https://download.pytorch.org/whl/cu116"
 
 [tool.black]
