--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -41,7 +41,7 @@ fsspec[http]==2022.11.0 ; python_full_version >= "3.8.1" and python_version < "3
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.29 ; python_full_version >= "3.8.1" and python_version < "3.12"
 huggingface-hub==0.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-identify==2.5.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
+identify==2.5.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 importlib-metadata==5.1.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
@@ -50,8 +50,8 @@ ipykernel==6.19.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipykernel[notebook]==6.19.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipython==8.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipywidgets[notebook]==8.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-isort==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-isort[colors]==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+isort==5.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+isort[colors]==5.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 joblib==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -73,10 +73,10 @@ mypy-extensions==0.4.3 ; python_full_version >= "3.8.1" and python_version < "3.
 nest-asyncio==1.5.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.23.5 ; python_version < "3.12" and python_full_version >= "3.8.1"
-nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 packaging==22.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pandas==1.5.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -148,7 +148,7 @@ tokenizers==0.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 toml==0.10.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomlkit==0.11.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-torch==1.13.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.64.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -159,7 +159,7 @@ typing-extensions==4.4.0 ; python_full_version >= "3.8.1" and python_version < "
 urllib3==1.26.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
 virtualenv==20.17.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 widgetsnbextension==4.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wrapt==1.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
