--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ json-tricks==3.16.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.23.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 packaging==22.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==9.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -36,11 +36,11 @@ setuptools==65.6.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-torch==1.13.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.64.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.25.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==1.26.13 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
