Remove PLR0915 check ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,7 +205,8 @@ ignore = [
     "C901",
     "B006",
     "PLR2004",
-    "PLR0913"
+    "PLR0913",
+    "PLR0915"
 ]
 line-length = 119
 select = [
