--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,35 +5,37 @@ appnope==0.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and 
 asttokens==2.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 async-timeout==4.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 attrs==22.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-babel==2.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+babel==2.12.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 backcall==0.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 bandit==1.7.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+beautifulsoup4==4.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 black==22.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 captum==0.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 certifi==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cffi==1.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and implementation_name == "pypy"
 cfgv==3.3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-charset-normalizer==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+charset-normalizer==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 click==8.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 comm==0.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-coverage[toml]==7.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+coverage[toml]==7.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 darglint==1.8.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-datasets[datasets]==2.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+datasets[datasets]==2.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 debugpy==1.6.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 decorator==5.1.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dill==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 distlib==0.3.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-docutils==0.18.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+docutils==0.19 ; python_full_version >= "3.8.1" and python_version < "3.12"
 dparse==0.6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 exceptiongroup==1.1.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
 executing==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 filelock==3.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fonttools==4.38.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fonttools==4.39.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 frozenlist==1.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fsspec[http]==2023.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec[http]==2023.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+furo==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitdb==4.0.10 ; python_full_version >= "3.8.1" and python_version < "3.12"
 gitpython==3.1.31 ; python_full_version >= "3.8.1" and python_version < "3.12"
 huggingface-hub==0.12.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -42,9 +44,9 @@ idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 imagesize==1.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 importlib-metadata==6.0.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
 iniconfig==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel==6.21.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipykernel[notebook]==6.21.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-ipython==8.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel==6.21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipykernel[notebook]==6.21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+ipython==8.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ipywidgets[notebook]==8.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jedi==0.18.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -77,11 +79,11 @@ pbr==5.11.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pexpect==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
 pickleshare==0.7.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==9.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-platformdirs==3.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+platformdirs==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pluggy==1.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pre-commit==2.21.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-prompt-toolkit==3.0.37 ; python_full_version >= "3.8.1" and python_version < "3.12"
+prompt-toolkit==3.0.38 ; python_full_version >= "3.8.1" and python_version < "3.12"
 protobuf==3.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 psutil==5.9.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 ptyprocess==0.7.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform != "win32"
@@ -91,7 +93,7 @@ pycparser==2.21 ; python_full_version >= "3.8.1" and python_version < "3.12" and
 pygments==2.14.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytest-cov==4.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pytest==7.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pytest==7.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pytz==2022.7.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_full_version >= "3.8.1" and python_version < "3.12"
@@ -109,19 +111,19 @@ safety==2.3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scikit-learn[sklearn]==1.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.97 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==67.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==67.5.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 smmap==5.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+soupsieve==2.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+sphinx-basic-ng==1.0.0b1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-copybutton==0.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-gitstamp==0.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx-markdown-tables==0.0.17 ; python_full_version >= "3.8.1" and python_version < "3.12"
-sphinx-rtd-theme==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinx==5.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-applehelp==1.0.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-devhelp==1.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-htmlhelp==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-sphinxcontrib-jquery==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-jsmath==1.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-qthelp==1.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sphinxcontrib-serializinghtml==1.1.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -136,16 +138,16 @@ tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tqdm==4.64.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.9.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.26.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==1.26.14 ; python_full_version >= "3.8.1" and python_version < "3.12"
-virtualenv==20.19.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+virtualenv==20.20.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wheel==0.38.4 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
 widgetsnbextension==4.0.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-zipp==3.14.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+zipp==3.15.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
