Pin typeguard to <=2.13.3, bump torch to 2.0.1 in lockfile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ protobuf = "^3.20.1"
 captum = "^0.6.0"
 numpy = "^1.21.6"
 torchtyping = "^0.1.4"
+typeguard = "<=2.13.3"
 torch = ">=1.13.1"
 matplotlib = "~3.5.3"
 tqdm = "^4.64.0"
