--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,17 @@ matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mpmath==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.24.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==9.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -31,6 +42,7 @@ regex==2023.5.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 requests==2.30.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==67.7.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sympy==1.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -42,3 +54,4 @@ transformers[sentencepiece,tokenizers,torch]==4.29.1 ; python_full_version >= "3
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==2.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
